--- a/package.json
+++ b/package.json
@@ -60,14 +60,16 @@
     "redux-logger": "2.2.1",
     "redux-thunk": "1.0.0",
     "sort-by": "^1.1.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.13.2",
     "supervisor": "^0.11.0",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.6",
-    "webpack": "^1.7.3",
     "webpack-dev-server": "^1.8.0"
   },
   "prettier": {
     "printWidth": 72
+  },
+  "devDependencies": {
+    "webpack": "1"
   }
 }
